--- a/data/rush/yugipedia1023237.yaml
+++ b/data/rush/yugipedia1023237.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（水属性／攻撃力１５００以下）２体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
