--- a/data/rush/yugipedia1023238.yaml
+++ b/data/rush/yugipedia1023238.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドに表側表示モンスター（水属性）がいる場合、このカードはリリースなしで召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,10 +33,13 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
 effect:
   en: |-
     None
@@ -44,7 +48,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
