--- a/data/rush/yugipedia1023240.yaml
+++ b/data/rush/yugipedia1023240.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札のモンスター（魚族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の「フィッシャーチャージ」１枚を選んで自分の魔法＆罠ゾーンにセットする。
   ko:
   zh-TW:
   zh-CN:
