--- a/data/rush/yugipedia1023241.yaml
+++ b/data/rush/yugipedia1023241.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの上からカード２枚を墓地へ送る。その後、この効果で墓地へ送られたカードの中から「チャージ・リモーラ」１体または「フィッシャーチャージ」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
