--- a/data/rush/yugipedia1023247.yaml
+++ b/data/rush/yugipedia1023247.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（魚族）は、相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
