--- a/data/rush/yugipedia1023253.yaml
+++ b/data/rush/yugipedia1023253.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスターがフュージョンモンスターのみの場合、このカードは直接攻撃できる。相手フィールドに表側表示のマキシマムモンスターがいる場合、相手はモンスターの効果を発動できない。
   ko:
   zh-TW:
   zh-CN:
@@ -52,7 +54,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「波導砲ビッグ・マグロム」＋「波導刀タネガシマグロ」
   ko:
   zh-TW:
   zh-CN:
