--- a/data/rush/yugipedia1023256.yaml
+++ b/data/rush/yugipedia1023256.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -34,7 +35,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃は貫通する。自分フィールドの表側表示モンスター（魚族）は相手の効果では破壊されない。
   ko:
   zh-TW:
   zh-CN:
@@ -52,7 +54,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「波導刀鬼丸クニツナ」＋「波導銃ミニ・マグロム」
   ko:
   zh-TW:
   zh-CN:
