--- a/data/rush/yugipedia1023258.yaml
+++ b/data/rush/yugipedia1023258.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（水属性／魚族）が５体以上いる場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,12 +33,15 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のフィールド・墓地のモンスター（水属性／魚族）を素材としてデッキに戻し、モンスター（水属性／魚族）をフュージョン召喚する。
   ko:
   zh-TW:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Polymerization
 images:
 - index: 1
   image: WaveFusion-RDKP15-JP-OP.png
