--- a/data/rush/yugipedia1004612.yaml
+++ b/data/rush/yugipedia1004612.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手がモンスターを召喚・特殊召喚した時、または相手が魔法カードを発動した後、自分フィールドの表側表示モンスター（魚族）１体を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドのカード１枚を選んで破壊する。その後、自分は１枚ドローする。
   ko:
   zh-TW:
   zh-CN:
