--- a/data/rush/yugipedia1023239.yaml
+++ b/data/rush/yugipedia1023239.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードの攻撃力はターン終了時まで、［自分フィールドの表側表示モンスター（魚族）のレベルの合計］×１００アップする。その後、自分の墓地の「波導砲ビッグ・マグロム」１体を選んで手札に加えるか自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
