--- a/data/rush/yugipedia1023245.yaml
+++ b/data/rush/yugipedia1023245.yaml
@@ -14,25 +14,27 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a Level 7 Fish Type monster, "Fusion", or "Wave Fusion" in your Graveyard, send 1 card from your hand to the Graveyard.
+    If you have a Level 7 Fish Type monster/"Fusion"/"Wave Fusion" in your Graveyard, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地にモンスター（レベル７／魚族）、「フュージョン」、「波涛融合」のいずれかがある場合、手札１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 Fish Type monster, "Fusion", or "Wave Fusion" from your Graveyard to your hand.
+    Add 1 Level 7 Fish Type monster/"Fusion"/"Wave Fusion" from your Graveyard to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル７／魚族）、「フュージョン」、「波涛融合」の中から１枚を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
