--- a/data/rush/16172.yaml
+++ b/data/rush/16172.yaml
@@ -53,6 +53,9 @@ property: Normal
 images:
 - index: 1
   image: GrandExtreme-RDVSP1-JP-C.png
+  illustration: GrandExtreme-DBR-JP-VG-artwork.png
+- index: 2
+  image: GrandExtreme-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP04-JP049
@@ -67,6 +70,10 @@ sets:
     set_name: Versus Pack Maximum Force
     rarities:
     - Common
+  - set_number: RD/S23P-JP008
+    set_name: Tournament Battle November 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP04-KR049
     set_name: 'Deck Mod Pack: Destined Power Destruction!!'
