--- a/data/cards/02772236.yaml
+++ b/data/cards/02772236.yaml
@@ -62,24 +62,45 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: OP23-EN021
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: DREV-DE044
     set_name: Duelist Revolution
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: OP23-DE021
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: DREV-FR044
     set_name: Duelist Revolution
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: OP23-FR021
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: DREV-IT044
     set_name: Duelist Revolution
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: OP23-IT021
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT021
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: DREV-JP044
     set_name: Duelist Revolution
