--- a/data/cards/24508238.yaml
+++ b/data/cards/24508238.yaml
@@ -101,6 +101,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: OP23-EN014
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   - set_number: DT05-EN003
     set_name: Duel Terminal 5a
     rarities:
@@ -160,6 +164,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: OP23-DE014
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: STON-FR024
     set_name: Strike of Neos
@@ -211,6 +219,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: OP23-FR014
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: STON-IT024
     set_name: Strike of Neos
@@ -266,6 +278,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: OP23-IT014
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: OP03-PT018
     set_name: OTS Tournament Pack 3
@@ -300,6 +316,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: OP23-PT014
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: STON-JP024
     set_name: Strike of Neos
