--- a/data/cards/48633301.yaml
+++ b/data/cards/48633301.yaml
@@ -50,9 +50,17 @@ sets:
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: OP23-EN019
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: SAST-DE010
     set_name: Savage Strike
+    rarities:
+    - Common
+  - set_number: OP23-DE019
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   fr:
@@ -60,14 +68,26 @@ sets:
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: OP23-FR019
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: SAST-IT010
     set_name: Savage Strike
     rarities:
     - Common
+  - set_number: OP23-IT019
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: SAST-PT010
     set_name: Savage Strike
+    rarities:
+    - Common
+  - set_number: OP23-PT019
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
