--- a/data/cards/50750868.yaml
+++ b/data/cards/50750868.yaml
@@ -62,26 +62,46 @@ sets:
     set_name: Savage Strike
     rarities:
     - Secret Rare
+  - set_number: OP23-EN009
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: SAST-DE050
     set_name: Savage Strike
     rarities:
     - Secret Rare
+  - set_number: OP23-DE009
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: SAST-FR050
     set_name: Savage Strike
     rarities:
     - Secret Rare
+  - set_number: OP23-FR009
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: SAST-IT050
     set_name: Savage Strike
     rarities:
     - Secret Rare
+  - set_number: OP23-IT009
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: SAST-PT050
     set_name: Savage Strike
     rarities:
     - Secret Rare
+  - set_number: OP23-PT009
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: SAST-JP050
     set_name: Savage Strike
