--- a/data/cards/62405028.yaml
+++ b/data/cards/62405028.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Ancient Guardians
     rarities:
     - Super Rare
+  - set_number: OP23-EN020
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: ANGU-DE002
     set_name: Ancient Guardians
     rarities:
     - Super Rare
+  - set_number: OP23-DE020
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: ANGU-FR002
     set_name: Ancient Guardians
     rarities:
     - Super Rare
+  - set_number: OP23-FR020
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: ANGU-IT002
     set_name: Ancient Guardians
     rarities:
     - Super Rare
+  - set_number: OP23-IT020
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: ANGU-PT002
     set_name: Ancient Guardians
     rarities:
     - Super Rare
+  - set_number: OP23-PT020
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: DBAG-JP002
     set_name: 'Deck Build Pack: Ancient Guardians'
