--- a/data/cards/90953320.yaml
+++ b/data/cards/90953320.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: OTS Tournament Pack 10
     rarities:
     - Common
+  - set_number: OP23-EN022
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   - set_number: JUMP-EN051
     set_name: Shonen Jump June/July 2011 subscription bonus
     rarities:
@@ -89,6 +93,10 @@ sets:
     set_name: OTS Tournament Pack 10
     rarities:
     - Common
+  - set_number: OP23-DE022
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: REDU-FRSE1
     set_name: 'Return of the Duelist: Special Edition'
@@ -100,6 +108,10 @@ sets:
     - Secret Rare
   - set_number: OP10-FR018
     set_name: OTS Tournament Pack 10
+    rarities:
+    - Common
+  - set_number: OP23-FR022
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   it:
@@ -115,6 +127,10 @@ sets:
     set_name: OTS Tournament Pack 10
     rarities:
     - Common
+  - set_number: OP23-IT022
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT211
     set_name: Legendary Collection 5D's Mega Pack
@@ -122,6 +138,10 @@ sets:
     - Secret Rare
   - set_number: OP10-PT018
     set_name: OTS Tournament Pack 10
+    rarities:
+    - Common
+  - set_number: OP23-PT022
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
