--- a/data/cards/98045062.yaml
+++ b/data/cards/98045062.yaml
@@ -157,7 +157,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
-  - set_number: OP23-EN0??
+  - set_number: OP23-EN002
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
@@ -274,7 +274,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
-  - set_number: OP23-DE0??
+  - set_number: OP23-DE002
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
@@ -379,7 +379,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
-  - set_number: OP23-FR0??
+  - set_number: OP23-FR002
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
@@ -484,7 +484,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
-  - set_number: OP23-IT0??
+  - set_number: OP23-IT002
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
@@ -548,7 +548,7 @@ sets:
     set_name: Wild Survivors
     rarities:
     - Rare
-  - set_number: OP23-PT0??
+  - set_number: OP23-PT002
     set_name: OTS Tournament Pack 23
     rarities:
     - Ultimate Rare
