--- a/data/cards/00002511.yaml
+++ b/data/cards/00002511.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP23-EN005
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: TAMA-DE020
     set_name: Tactical Masters
@@ -63,6 +67,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP23-DE005
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: TAMA-FR020
     set_name: Tactical Masters
@@ -72,6 +80,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP23-FR005
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: TAMA-IT020
     set_name: Tactical Masters
@@ -81,6 +93,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP23-IT005
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: TAMA-PT020
     set_name: Tactical Masters
@@ -90,6 +106,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
+  - set_number: OP23-PT005
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBTM-JP020
     set_name: 'Deck Build Pack: Tactical Masters'
