--- a/data/cards/00402568.yaml
+++ b/data/cards/00402568.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: OP23-EN015
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: TSHD-DE025
     set_name: The Shining Darkness
@@ -64,6 +68,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: OP23-DE015
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: TSHD-FR025
     set_name: The Shining Darkness
@@ -73,6 +81,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: OP23-FR015
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: TSHD-IT025
     set_name: The Shining Darkness
@@ -82,11 +94,19 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: OP23-IT015
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: DUOV-PT064
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: OP23-PT015
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: TSHD-JP025
     set_name: The Shining Darkness
