--- a/data/cards/07336745.yaml
+++ b/data/cards/07336745.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-EN013
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: CYAC-DE076
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-DE013
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: CYAC-FR076
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-FR013
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: CYAC-IT076
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-IT013
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: CYAC-PT076
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-PT013
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: CYAC-JP076
     set_name: Cyberstorm Access
