--- a/data/cards/34717238.yaml
+++ b/data/cards/34717238.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: 'Champion Pack: Game Five'
     rarities:
     - Rare
+  - set_number: OP23-EN011
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: STON-DE060
     set_name: Strike of Neos
@@ -59,6 +63,10 @@ sets:
     set_name: 'Champion Pack: Game Five'
     rarities:
     - Rare
+  - set_number: OP23-DE011
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: STON-FR060
     set_name: Strike of Neos
@@ -69,6 +77,10 @@ sets:
     set_name: 'Champion Pack: Game Five'
     rarities:
     - Rare
+  - set_number: OP23-FR011
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: STON-IT060
     set_name: Strike of Neos
@@ -79,6 +91,15 @@ sets:
     set_name: 'Champion Pack: Game Five'
     rarities:
     - Rare
+  - set_number: OP23-IT011
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: OP23-PT011
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: STON-JP060
     set_name: Strike of Neos
