--- a/data/cards/35405755.yaml
+++ b/data/cards/35405755.yaml
@@ -59,24 +59,40 @@ sets:
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: OP23-DE001
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: POTE-FR031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: OP23-FR001
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: POTE-IT031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: OP23-IT001
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: POTE-PT031
     set_name: Power of the Elements
     rarities:
     - Secret Rare
     - Starlight Rare
+  - set_number: OP23-PT001
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: POTE-JP031
     set_name: Power of the Elements
