--- a/data/cards/69610326.yaml
+++ b/data/cards/69610326.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: OP23-EN018
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: MACR-DE019
     set_name: Maximum Crisis
@@ -85,6 +89,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: OP23-DE018
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: MACR-FR019
     set_name: Maximum Crisis
@@ -94,6 +102,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: OP23-FR018
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: MACR-IT019
     set_name: Maximum Crisis
@@ -103,6 +115,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: OP23-IT018
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: MACR-PT019
     set_name: Maximum Crisis
@@ -112,6 +128,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Secret Rare
+  - set_number: OP23-PT018
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: MACR-JP019
     set_name: Maximum Crisis
