--- a/data/cards/73055622.yaml
+++ b/data/cards/73055622.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP23-EN025
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: RATE-DE060
     set_name: Raging Tempest
@@ -58,6 +62,10 @@ sets:
     - Common
   - set_number: MP17-DE213
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP23-DE025
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   fr:
@@ -69,6 +77,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP23-FR025
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: RATE-IT060
     set_name: Raging Tempest
@@ -78,6 +90,10 @@ sets:
     set_name: 2017 Mega-Tin Mega Pack
     rarities:
     - Common
+  - set_number: OP23-IT025
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: RATE-PT060
     set_name: Raging Tempest
@@ -85,6 +101,10 @@ sets:
     - Common
   - set_number: MP17-PT213
     set_name: 2017 Mega-Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: OP23-PT025
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
