--- a/data/cards/76641981.yaml
+++ b/data/cards/76641981.yaml
@@ -48,6 +48,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: OP23-EN027
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   de:
   - set_number: EXVC-DE070
     set_name: Extreme Victory
@@ -57,6 +61,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: OP23-DE027
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   fr:
   - set_number: EXVC-FR070
     set_name: Extreme Victory
@@ -66,6 +74,10 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: OP23-FR027
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   it:
   - set_number: EXVC-IT070
     set_name: Extreme Victory
@@ -75,11 +87,19 @@ sets:
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: OP23-IT027
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   pt:
   - set_number: LC5D-PT221
     set_name: Legendary Collection 5D's Mega Pack
     rarities:
     - Secret Rare
+  - set_number: OP23-PT027
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: EXVC-JP070
     set_name: Extreme Victory
