--- a/data/cards/83334932.yaml
+++ b/data/cards/83334932.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-EN006
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: CYAC-DE003
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-DE006
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: CYAC-FR003
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-FR006
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: CYAC-IT003
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-IT006
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: CYAC-PT003
     set_name: Cyberstorm Access
     rarities:
     - Common
+  - set_number: OP23-PT006
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: CYAC-JP003
     set_name: Cyberstorm Access
