--- a/data/cards/92428405.yaml
+++ b/data/cards/92428405.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP23-EN012
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: MAZE-DE027
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP23-DE012
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: MAZE-FR027
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP23-FR012
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: MAZE-IT027
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP23-IT012
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: MAZE-PT027
     set_name: Maze of Memories
     rarities:
     - Rare
+  - set_number: OP23-PT012
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: HC01-JP037
     set_name: History Archive Collection
