--- a/data/cards/92714517.yaml
+++ b/data/cards/92714517.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: OP23-EN003
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   de:
   - set_number: PHHY-DE077
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: OP23-DE003
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   fr:
   - set_number: PHHY-FR077
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: OP23-FR003
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   it:
   - set_number: PHHY-IT077
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: OP23-IT003
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   pt:
   - set_number: PHHY-PT077
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+  - set_number: OP23-PT003
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Ultimate Rare
   ja:
   - set_number: PHHY-JP077
     set_name: Photon Hypernova
