--- a/data/cards/99937842.yaml
+++ b/data/cards/99937842.yaml
@@ -72,26 +72,46 @@ sets:
     set_name: Savage Strike
     rarities:
     - Ultra Rare
+  - set_number: OP23-EN008
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   de:
   - set_number: SAST-DE039
     set_name: Savage Strike
     rarities:
     - Ultra Rare
+  - set_number: OP23-DE008
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   fr:
   - set_number: SAST-FR039
     set_name: Savage Strike
     rarities:
     - Ultra Rare
+  - set_number: OP23-FR008
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   it:
   - set_number: SAST-IT039
     set_name: Savage Strike
     rarities:
     - Ultra Rare
+  - set_number: OP23-IT008
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   pt:
   - set_number: SAST-PT039
     set_name: Savage Strike
     rarities:
     - Ultra Rare
+  - set_number: OP23-PT008
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Super Rare
   ja:
   - set_number: SAST-JP039
     set_name: Savage Strike
