--- a/data/rush/16917.yaml
+++ b/data/rush/16917.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
