--- a/data/rush/17008.yaml
+++ b/data/rush/17008.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and all face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
+    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
   de:
   es:
   fr:
