--- a/rush.yaml
+++ b/rush.yaml
@@ -44263,7 +44263,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and all face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
+    While this card is face-up in the Field Zone, face-up non-LIGHT Attribute monsters on the field lose 300 ATK, and face-up Level 9 LIGHT Attribute monsters on the field cannot be destroyed by Trap Card effects.
   de:
   es:
   fr:
@@ -45768,7 +45768,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects.
+    This card cannot be destroyed by your opponent's Trap Card effects this turn.
   de:
   es:
   fr:
@@ -50810,7 +50810,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and all face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
+    While this card is face-up in the Field Zone, face-up Level 7 or higher Machine Type monsters on the field gain 400 ATK, and face-up Level 10 Machine Type monsters on the field cannot be destroyed by Spell/Trap Card effects.
   de:
   es:
   fr:
@@ -68619,7 +68619,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card gains ATK equal to [the number of monsters on your opponent's field] x 1000 until the end of this turn. This turn, this card cannot be destroyed by your opponent's Trap Card effects.
+    ● This card gains ATK equal to [the number of monsters on your opponent's field] x 1000 until the end of this turn. This card cannot be destroyed by your opponent's Trap Card effects this turn.
     ● Destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
@@ -83037,7 +83037,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
+    This card cannot be destroyed by your opponent's Trap Card effects this turn. Then, if you sent a Plant Type monster to the Graveyard to meet the requirement, this card gains 700 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -104747,7 +104747,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. This turn, this card cannot be destroyed by your opponent's Trap Card effects. Then, you can make this card gain ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
+    Send the top 3 cards of your Deck to the Graveyard. This card cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can make this card gain ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
