--- a/data/cards/00402568.yaml
+++ b/data/cards/00402568.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 电力长颈鹿
 text:
   en: |-
-    This card can attack your opponent directly. If this card inflicts battle damage to your opponent by a direct attack: Your opponent cannot activate cards or effects until the end of this turn.
+    This card can attack directly. If this card inflicts battle damage to your opponent by a direct attack: Your opponent cannot activate cards or effects until the end of this turn.
   de: |-
     Diese Karte kann deinen Gegner direkt angreifen. Falls diese Karte deinem Gegner Kampfschaden durch einen direkten Angriff zufügt: Dein Gegner kann bis zum Ende dieses Spielzugs weder Karten noch Effekte aktivieren.
   es: |-
@@ -44,7 +44,7 @@ series:
 - Watt
 images:
 - index: 1
-  image: Wattgiraffe-DUOV-EN-UR-1E.png
+  image: Wattgiraffe-OP23-EN-C-UE.png
 sets:
   en:
   - set_number: TSHD-EN025
