--- a/data/cards/22211622.yaml
+++ b/data/cards/22211622.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 霸王门 无限
 text:
   en: |-
-    Once per turn: You can target 1 other face-up card you control; destroy both it and this card, and if you do, Special Summon 1 Dragon-Type Xyz or Pendulum Monster from your Extra Deck, but its ATK and DEF become 0, it has its effects negated, also it cannot be used as a Material for a Synchro or Xyz Summon. If this card in the Monster Zone is destroyed by battle or card effect: You can place this card in your Pendulum Zone.
+    Once per turn: You can target 1 other face-up card you control; destroy both it and this card, and if you do, Special Summon 1 Dragon Xyz or Pendulum Monster from your Extra Deck, but its ATK/DEF become 0, its effects are negated, also it cannot be used as material for a Synchro or Xyz Summon. If this card in the Monster Zone is destroyed by battle or card effect: You can place this card in your Pendulum Zone.
   de: |-
     Einmal pro Spielzug: Du kannst 1 andere offene Karte wählen, die du kontrollierst; zerstöre sowohl sie als auch diese Karte und falls du dies tust, beschwöre 1 Xyz- oder Pendelmonster vom Typ Drache als Spezialbeschwörung von deinem Extra Deck, aber seine ATK und DEF werden zu 0, seine Effekte bleiben annulliert, zusätzlich kann es nicht als Material für eine Synchro- oder Xyz-Beschwörung verwendet werden. Falls diese Karte in der Monsterzone durch Kampf oder einen Karteneffekt zerstört wird: Du kannst diese Karte in deine Pendelzone legen.
   es: |-
@@ -65,7 +65,7 @@ series:
 - Supreme King Gate
 images:
 - index: 1
-  image: SupremeKingGateInfinity-MACR-EN-SR-1E.png
+  image: SupremeKingGateInfinity-OP23-EN-C-UE.png
 sets:
   en:
   - set_number: MACR-EN018
