--- a/data/cards/11264180.yaml
+++ b/data/cards/11264180.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: TGX1-HL
 text:
   en: |-
-    Target 1 "T.G." monster you control; its ATK and DEF each become half its current ATK and DEF, and if they do, destroy 1 other Spell/Trap Card on the field.
+    Target 1 "T.G." monster you control; its ATK/DEF each become half its current ATK/DEF, and if they do, destroy 1 other Spell/Trap on the field.
   de: |-
     Wähle 1 „T.G.“-Monster, das du kontrollierst; seine ATK und DEF werden jeweils zur Hälfte seiner derzeitigen ATK und DEF und falls sie das tun, zerstöre 1 andere Zauber-/Fallenkarte auf dem Spielfeld.
   es: |-
@@ -37,7 +37,7 @@ card_type: Spell
 property: Quick-Play
 images:
 - index: 1
-  image: TGX1HL-LC5D-EN-UR-1E.png
+  image: TGX1HL-OP23-EN-C-UE.png
 sets:
   en:
   - set_number: EXVC-EN053
