--- a/data/cards/yugipedia1022872.yaml
+++ b/data/cards/yugipedia1022872.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Prisoner Princess of Fruitful Flames
+  en: Promethean Princess, Bestower of Flames
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Effect Monsters
-    You cannot Special Summon monsters, except FIRE monsters. You can only use each of the following effects of "Prisoner Princess of Fruitful Flames" once per turn. During your Main Phase: You can Special Summon 1 FIRE monster from your GY. If a monster(s) is Special Summoned to your opponent's field while this card is in your GY: You can target 1 FIRE monster you control and 1 monster your opponent controls; destroy them, and if you do, Special Summon this card.
+    You cannot Special Summon monsters, except FIRE monsters. You can only use each of the following effects of "Promethean Princess, Bestower of Flames" once per turn. During your Main Phase: You can Special Summon 1 FIRE monster from your GY. If a monster(s) is Special Summoned to your opponent's field, while this card is in your GY (except during the Damage Step): You can target 1 FIRE monster you control and 1 monster your opponent controls; destroy them, and if you do, Special Summon this card.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ atk: 2700
 materials: 2+ Effect Monsters
 images:
 - index: 1
-  image: PrisonerPrincessofFruitfulFlames-PHNI-JP-OP.png
+  image: PrometheanPrincessBestowerofFlames-PHNI-JP-OP.png
 sets:
   ja:
   - set_number: PHNI-JP052
@@ -55,11 +55,6 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1022872
 fake_password:
 - 101203052
