--- a/data/cards/46820049.yaml
+++ b/data/cards/46820049.yaml
@@ -39,6 +39,8 @@ attribute: DARK
 level: 5
 atk: 1800
 def: 1700
+series:
+- Chthonian
 images:
 - index: 1
   image: MefisttheInfernalGeneral-DCR-EN-R-UE-25thAnniversaryEdition.png
