--- a/rush.yaml
+++ b/rush.yaml
@@ -123871,3 +123871,65 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023258
+---
+konami_id:
+name:
+  en: Dead End the Mad Fiend of Despair
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>絶<rt>ぜつ</rt></ruby><ruby>望<rt>ぼう</rt></ruby><ruby>狂<rt>きょう</rt></ruby><ruby>魔<rt>ま</rt></ruby>デッド・エンド
+  ja_romaji: Zetsubōkyōma Deddo Endo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 4 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 face-up Level 8 or lower monster on your opponent's field. Then, if you have 6 or more monsters with the same Attribute in your Graveyard, you can Special Summon 1 Level 7 or lower monster from your opponent's Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 8
+atk: 2500
+def: 1200
+images:
+- index: 1
+  image: DeadEndtheMadFiendofDespair-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP033
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023348
