--- a/data/cards/01834107.yaml
+++ b/data/cards/01834107.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Quando un mostro di Tipo Tuono che controlli infligge danno da combattimento al tuo avversario, tu guadagni Life Points pari al danno inflitto.
   pt: |-
-    Quando um monstro do Tipo Trovão que você controla causar Dano de Batalha ao seu oponente, ganhe PV igual ao dano causado.
+    Quando um monstro Trovão que você controla causar dano de batalha ao seu oponente: ganhe PV igual ao dano que ele sofreu.
   ja: |-
     自分フィールド上に存在する雷族モンスターが相手ライフに戦闘ダメージを与えた時、与えた戦闘ダメージの数値分だけ自分のライフポイントを回復する。
   ko: |-
