--- a/data/cards/12296376.yaml
+++ b/data/cards/12296376.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Questa carta può attaccare due volte durante ogni Battle Phase. Qualsiasi mostro che combatte con questa carta non può cambiare la sua Posizione.
   pt: |-
-    Este card pode atacar duas vezes durante cada Fase de Batalha. Qualquer monstro que batalhar com este card não pode mudar sua posição de batalha.
+    Este card pode realizar um segundo ataque durante cada Fase de Batalha. Qualquer monstro que batalhar com este card não pode mudar sua posição de batalha.
   ja: |-
     このカードは１度のバトルフェイズ中に２回攻撃する事ができる。このカードと戦闘を行ったモンスターは表示形式を変更する事ができない。
   ko: |-
