--- a/data/cards/14558127.yaml
+++ b/data/cards/14558127.yaml
@@ -123,7 +123,7 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: RA01-EN0??
+  - set_number: RA01-EN008
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -174,7 +174,7 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: RA01-DE0??
+  - set_number: RA01-DE008
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -225,7 +225,7 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: RA01-FR0??
+  - set_number: RA01-FR008
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -276,7 +276,7 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: RA01-IT0??
+  - set_number: RA01-IT008
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -327,7 +327,7 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
-  - set_number: RA01-PT0??
+  - set_number: RA01-PT008
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
