--- a/data/cards/32548609.yaml
+++ b/data/cards/32548609.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Questa carta può attaccare due volte durante ogni Battle Phase. Se questa carta attacca un mostro coperto in Posizione di Difesa, puoi distruggere quel mostro immediatamente con l'effetto di questa carta senza scoprirlo o applicare il calcolo dei danni.
   pt: |-
-    Este card pode atacar duas vezes durante cada Fase de Batalha. Se este card atacar um monstro com a face para baixo em Posição de Defesa, você pode destruir esse monstro imediatamente com o efeito deste card sem virá-lo com a face para cima ou aplicar o cálculo de dano.
+    Este card pode realizar um segundo ataque durante cada Fase de Batalha. No começo da Etapa de Dano, se este card atacar um monstro com a face para baixo em Posição de Defesa: você pode destruir esse monstro com a face para baixo.
   ja: |-
     このカードは１度のバトルフェイズ中に２回攻撃する事ができる。このカードが裏側守備表示のモンスターを攻撃した場合、ダメージ計算を行わず裏側守備表示のままそのモンスターを破壊する事ができる。
   ko: |-
