--- a/data/cards/46897277.yaml
+++ b/data/cards/46897277.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta viene distrutta da una carta del tuo avversario (in battaglia o tramite l'effetto di una carta) il tuo avversario non può Evocare Specialmente mostri o attivare Carte Magie o Trappola o effetti di Carte Magia, Trappola o Mostro, per il resto di questo turno.
   pt: |-
-    Se este card for destruído por um card do oponente (seja em batalha ou por um efeito de card), seu oponente não pode Invocar um monstro por Invocação-Especial ou ativar Magias, Armadilhas, efeitos de Magia/Armadilha ou efeitos de Card de Monstro pelo resto deste turno.
+    Se este card em posse do seu dono for destruído por um card do oponente: seu oponente não pode Invocar monstros por Invocação-Especial, nem ativar cards ou efeitos, pelo resto deste turno.
   ja: |-
     このカードが相手によって破壊された場合、そのターン相手はモンスターの特殊召喚及び魔法・罠・効果モンスターの効果を発動する事ができない。
   ko: |-
