--- a/data/cards/48686504.yaml
+++ b/data/cards/48686504.yaml
@@ -85,6 +85,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-EN002
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: PTDN-DE088
     set_name: Phantom Darkness
@@ -126,6 +136,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-DE002
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: PTDN-FR088
     set_name: Phantom Darkness
@@ -163,6 +183,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-FR002
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: PTDN-IT088
     set_name: Phantom Darkness
@@ -200,6 +230,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-IT002
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: AP04-PT017
     set_name: Astral Pack Four
@@ -229,6 +269,16 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: RA01-PT002
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: EXP1-JP031
     set_name: Extra Pack
