--- a/data/cards/53193261.yaml
+++ b/data/cards/53193261.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     I mostri "Watt" scoperti che controlli possono attaccare il tuo avversario direttamente in questo turno.
   pt: |-
-    Monstros "Watt" com a face para cima que você controla podem atacar seu oponente diretamente neste turno.
+    Monstros "Watt" que você controla atualmente podem atacar diretamente neste turno.
   ja: |-
     自分フィールド上に表側表示で存在する「エレキ」と名のついたモンスターは、このターン相手プレイヤーに直接攻撃する事ができる。
   ko: |-
