--- a/data/cards/66214679.yaml
+++ b/data/cards/66214679.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Una volta per turno, dopo aver risolto una Carta Magia che è stata attivata durante la Main Phase del tuo avversario: puoi scegliere come bersaglio 1 mostro OSCURITÀ di Livello 4 nel tuo Cimitero; Evoca Specialmente quel bersaglio. Questa carta deve essere scoperta sul Terreno per attivare e risolvere questo effetto.
   pt: |-
-    Uma vez por turno, depois de resolver um Card de Magia que foi ativado durante a Fase Principal do seu oponente: Você pode escolher 1 monstro de TREVAS de Nível 4 no seu Cemitério; Invoque o alvo por Invocação-Especial. Este card deve estar com a face para cima no campo para ativar e resolver este efeito.
+    Uma vez por turno, depois de resolver um Card de Magia que foi ativado durante a Fase Principal do seu oponente: você pode escolher 1 monstro de TREVAS de Nível 4 no seu Cemitério; Invoque o alvo por Invocação-Especial. Este card deve estar com a face para cima no campo para ativar e resolver este efeito.
   ja: |-
     このカードがフィールド上に存在する限り、相手のメインフェイズ時に魔法カードが発動された場合、自分の墓地からレベル４の悪魔族モンスター１体を特殊召喚する事ができる。この効果は１ターンに１度しか使用できない。
   ko: |-
