--- a/data/cards/95084054.yaml
+++ b/data/cards/95084054.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Una volta per turno, quando uno o più mostri di Tipo Tuono di Livello 4 o inferiore vengono Evocati Normalmente o Specialmente sul Terreno, infliggi 600 danni al tuo avversario.
   pt: |-
-    Uma vez por turno, quando um ou mais monstros do Tipo Trovão de Nível 4 ou menos forem Invocados por Invocação-Normal ou Especial no campo, cause 600 de dano ao seu oponente.
+    Uma vez por turno, quando um ou mais monstros Trovão de Nível 4 ou menos forem Invocados por Invocação-Normal ou Especial: cause 600 de dano ao seu oponente.
   ja: |-
     フィールド上にレベル４以下の雷族モンスターが召喚・特殊召喚された時、相手ライフに６００ポイントダメージを与える。この効果は１ターンに１度しか使用できない。
   ko: |-
