--- a/data/cards/97268402.yaml
+++ b/data/cards/97268402.yaml
@@ -177,7 +177,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: RA01-DE0??
+  - set_number: RA01-DE003
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -249,7 +249,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: RA01-FR0??
+  - set_number: RA01-FR003
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -321,7 +321,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: RA01-IT0??
+  - set_number: RA01-IT003
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
@@ -380,7 +380,7 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
-  - set_number: RA01-PT0??
+  - set_number: RA01-PT003
     set_name: 25th Anniversary Rarity Collection
     rarities:
     - SR
