--- a/data/cards/98931003.yaml
+++ b/data/cards/98931003.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 纳纳纳
 text:
   en: |-
-    Target 1 Level 7 or Rank 7 monster you control; it gains 700 ATK/DEF until the end of this turn.
+    Target 1 Level/Rank 7 monster you control; it gains 700 ATK/DEF until the end of this turn.
   de:
   es:
   fr:
