--- a/data/cards/kdb11927.yaml
+++ b/data/cards/kdb11927.yaml
@@ -63,6 +63,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: RA01-EN007
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: DPBC-DE001
     set_name: 'Duelist Pack: Battle City'
@@ -80,6 +90,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: RA01-DE007
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: DPBC-FR001
     set_name: 'Duelist Pack: Battle City'
@@ -97,6 +117,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: RA01-FR007
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: DPBC-IT001
     set_name: 'Duelist Pack: Battle City'
@@ -114,6 +144,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: RA01-IT007
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: DPBC-PT001
     set_name: 'Duelist Pack: Battle City'
@@ -131,6 +171,16 @@ sets:
     set_name: 'Ghosts From the Past: The 2nd Haunting'
     rarities:
     - Ghost Rare
+  - set_number: RA01-PT007
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: DP16-JP001
     set_name: 'Duelist Pack: Battle City'
