--- a/data/cards/00102380.yaml
+++ b/data/cards/00102380.yaml
@@ -81,6 +81,16 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: RA01-EN001
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   - set_number: PGD-107
     set_name: Pharaonic Guardian
     rarities:
@@ -130,6 +140,16 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: RA01-DE001
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: DR1-FR051
     set_name: Dark Revelation Volume 1
@@ -167,6 +187,16 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: RA01-FR001
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: DR1-IT051
     set_name: Dark Revelation Volume 1
@@ -204,6 +234,16 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: RA01-IT001
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: DR1-PT051
     set_name: Dark Revelation Volume 1
@@ -233,6 +273,16 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Ultra Rare
+  - set_number: RA01-PT001
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: 301-051
     set_name: The New Ruler
