--- a/data/cards/15397015.yaml
+++ b/data/cards/15397015.yaml
@@ -56,6 +56,16 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: RA01-EN010
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   de:
   - set_number: EXFO-DE035
     set_name: Extreme Force
@@ -69,6 +79,16 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: RA01-DE010
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   fr:
   - set_number: EXFO-FR035
     set_name: Extreme Force
@@ -82,6 +102,16 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: RA01-FR010
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   it:
   - set_number: EXFO-IT035
     set_name: Extreme Force
@@ -95,6 +125,16 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: RA01-IT010
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   pt:
   - set_number: EXFO-PT035
     set_name: Extreme Force
@@ -108,6 +148,16 @@ sets:
     set_name: Duel Devastator
     rarities:
     - Ultra Rare
+  - set_number: RA01-PT010
+    set_name: 25th Anniversary Rarity Collection
+    rarities:
+    - SR
+    - UR
+    - ScR
+    - PlScR
+    - QCScR
+    - UtR
+    - CR
   ja:
   - set_number: EXFO-JP035
     set_name: Extreme Force
