--- a/rush.yaml
+++ b/rush.yaml
@@ -123894,7 +123894,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター４体をデッキに戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -123906,7 +123907,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊する。その後、自分の墓地に同じ属性を持つモンスターが６体以上いる場合、相手の墓地のモンスター（レベル７以下）１体を選んで自分フィールドに表側表示で特殊召喚できる。
   ko:
   zh-TW:
   zh-CN:
